# CROSSCON-Hypervisor-and-TEE-Isolation-Demos

./: .gitignore  .gitmodules  README.md  run-aarch64-demo.sh  run-riscv64-demo.sh
CROSSCONHyp-configs/qemu-virt-aarch64-single-vTEE/: config.S  config.c
CROSSCONHyp-configs/qemu-virt-riscv64-single-vTEE/: config.S  config.c
aarch64-ws/: aarch64-dt1.dts  aarch64-dt2.dts  run-demo-enclave.sh  run-demo-models.sh  run-demo-multi.sh  run-demo-per-vm-vtee.sh  run-demo.sh  run-demo2.sh
aarch64-ws/configs/qemu-virt-aarch64-dual-vTEE/: config.c
aarch64-ws/configs/qemu-virt-aarch64-models/: config.c
aarch64-ws/configs/qemu-virt-aarch64-multi/: config.c
aarch64-ws/configs/qemu-virt-aarch64-per-vm-vTEE/: config.c
env/: Dockerfile  README.md  build.sh
env/files/: .gitmodules  build.sh  env.sh
env/patches/dtc/: dtc-patch.patch
lloader/: aarch64.S  riscv.S
malicous_ta/: .gitignore  CMakeLists.txt  README.md
malicous_ta/host/: Makefile  main.c  malicious_ca
malicous_ta/ta/: Makefile  malicious_ta.c  sub.mk  user_ta_header_defines.h
malicous_ta/ta/include/: malicious_ta.h
riscv64-ws/: riscv64-dt1.dts  riscv64-dt2.dts  run-demo-vtee.sh  run-demo.sh  run-demo1.sh  run-demo2.sh
rpi4-ws/: README.md  build-demo-dual-vtee.sh  build-demo-vtee.sh  rpi4.dts
support/: 0001-hw-arm-virt-Add-second-uart.patch  0001-hw-riscv-virt-Add-second-uart.patch  aarch64-dt1.dts  br-aarch64.config  br-riscv64.config  linux-aarch64.config  linux-riscv64.config  riscv64-dt1.dts  riscv64-dt2.dts
zcu-ws/: README.md  build-demo-dual-vtee.sh  build-demo-vtee.sh  zcu.dts
(+20 files in other folders)
